[package]
name = "ct2-calculator"
version = "0.1.0"
edition = "2021"
description = "Ct2 Calculator WASM module"
repository = "https://github.com/lukasbischof/ct2-calculator"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen="0.2"
num-format = { version = "0.4.0", features = ["with-num-bigint"]  }
num-bigint = "0.4"
num-bigfloat = "0.1.4"
num-traits = "0.2.15"
regex = "1.5.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
lto = true
